software/branches/1.3RC/interfaces/iMesh/spec/iMesh_new.h


typedef struct iMesh_Instance_Private* iMesh_Instance;
void iMesh_isEntSetContained(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle containing_entity_set, 
    const iBase_EntitySetHandle contained_entity_set, 
    int* is_contained, 
    int* err  
);
void iMesh_addPrntChld(
    iMesh_Instance instance, 
    iBase_EntitySetHandle parent_entity_set, 
    iBase_EntitySetHandle child_entity_set, 
    int* err  
);
void iMesh_rmvPrntChld(
    iMesh_Instance instance, 
    iBase_EntitySetHandle parent_entity_set, 
    iBase_EntitySetHandle child_entity_set, 
    int* err  
);
void iMesh_isChildOf(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle parent_entity_set, 
    const iBase_EntitySetHandle child_entity_set, 
    int* is_child, 
    int* err  
);
void iMesh_getNumChld(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set, 
    const int num_hops, 
    int* num_child, 
    int* err  
);
void iMesh_getNumPrnt(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set, 
    const int num_hops, 
    int* num_parent, 
    int* err  
);
void iMesh_getChldn(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle from_entity_set, 
    const int num_hops, 
    iBase_EntitySetHandle** entity_set_handles, 
    int* entity_set_handles_allocated, 
    int* entity_set_handles_size, 
    int* err  
);
void iMesh_getPrnts(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle from_entity_set, 
    const int num_hops, 
    iBase_EntitySetHandle** entity_set_handles, 
    int* entity_set_handles_allocated, 
    int* entity_set_handles_size, 
    int* err  
);
void iMesh_setVtxArrCoords(
    iMesh_Instance instance, 
    const iBase_EntityHandle* vertex_handles, 
    const int vertex_handles_size, 
    const int storage_order, 
    const double* new_coords, 
    const int new_coords_size, 
    int* err  
);
void iMesh_createVtxArr(
    iMesh_Instance instance, 
    const int num_verts, 
    const int storage_order, 
    const double* new_coords, 
    const int new_coords_size, 
    iBase_EntityHandle** new_vertex_handles, 
    int* new_vertex_handles_allocated, 
    int* new_vertex_handles_size, 
    int* err  
);
void iMesh_createEntArr(
    iMesh_Instance instance, 
    const int new_entity_topology, 
    const iBase_EntityHandle* lower_order_entity_handles, 
    const int lower_order_entity_handles_size, 
    iBase_EntityHandle** new_entity_handles, 
    int* new_entity_handles_allocated, 
    int* new_entity_handles_size, 
    int** status, 
    int* status_allocated, 
    int* status_size, 
    int* err  
);
void iMesh_deleteEntArr(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    int* err  
);
void iMesh_createTag(
    iMesh_Instance instance, 
    const char* tag_name, 
    const int tag_size, 
    const int tag_type, 
    iBase_TagHandle* tag_handle, 
    int* err, 
    const int tag_name_len  
);
void iMesh_destroyTag(
    iMesh_Instance instance, 
    iBase_TagHandle tag_handle, 
    const int forced, 
    int* err  
);
void iMesh_getTagName(
    iMesh_Instance instance, 
    const iBase_TagHandle tag_handle, 
    char* name, 
    int* err, 
    int name_len  
);
void iMesh_getTagSizeValues(
    iMesh_Instance instance, 
    const iBase_TagHandle tag_handle, 
    int* tag_size, 
    int* err  
);
void iMesh_getTagSizeBytes(
    iMesh_Instance instance, 
    const iBase_TagHandle tag_handle, 
    int* tag_size, 
    int* err  
);
void iMesh_getTagHandle(
    iMesh_Instance instance, 
    const char* tag_name, 
    iBase_TagHandle* tag_handle, 
    int* err, 
    int tag_name_len  
);
void iMesh_getTagType(
    iMesh_Instance instance, 
    const iBase_TagHandle tag_handle, 
    int* tag_type, 
    int* err  
);
void iMesh_setEntSetData(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set_handle, 
    const iBase_TagHandle tag_handle, 
    const void* tag_value, 
    const int tag_value_size, 
    int* err  
);
void iMesh_setEntSetIntData(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set, 
    const iBase_TagHandle tag_handle, 
    const int tag_value, 
    int* err  
);
void iMesh_setEntSetDblData(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set, 
    const iBase_TagHandle tag_handle, 
    const double tag_value, 
    int* err  
);
void iMesh_setEntSetEHData(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set, 
    const iBase_TagHandle tag_handle, 
    const iBase_EntityHandle tag_value, 
    int* err  
);