software/branches/1.3RC/interfaces/iMesh/examples/FindAdjacency/iMesh_iso.F03


     subroutine iMesh_isEntSetContained ( instance, containing_entity_set, contained_entity_set, is_contained, &
          err ) 
       ! ,bind(C,name="iMesh_isEntSetContained") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: containing_entity_set
       type(c_ptr), intent(in), value :: contained_entity_set
       integer(c_int), intent(out) :: is_contained
       integer(c_int), intent(out) :: err
     end subroutine iMesh_isEntSetContained

     subroutine iMesh_addPrntChld ( instance, parent_entity_set, child_entity_set, err ) 
       ! ,bind(C,name="iMesh_addPrntChld") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: parent_entity_set
       type(c_ptr), intent(in), value :: child_entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_addPrntChld

     subroutine iMesh_rmvPrntChld ( instance, parent_entity_set, child_entity_set, err ) 
       ! ,bind(C,name="iMesh_rmvPrntChld") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: parent_entity_set
       type(c_ptr), intent(in), value :: child_entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_rmvPrntChld

     subroutine iMesh_isChildOf ( instance, parent_entity_set, child_entity_set, is_child, err ) 
       ! ,bind(C,name="iMesh_isChildOf") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: parent_entity_set
       type(c_ptr), intent(in), value :: child_entity_set
       integer(c_int), intent(out) :: is_child
       integer(c_int), intent(out) :: err
     end subroutine iMesh_isChildOf

     subroutine iMesh_getNumChld ( instance, entity_set, num_hops, num_child, err ) 
       ! ,bind(C,name="iMesh_getNumChld") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       integer(c_int), intent(in), value :: num_hops
       integer(c_int), intent(out) :: num_child
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getNumChld

     subroutine iMesh_getNumPrnt ( instance, entity_set, num_hops, num_parent, err ) 
       ! ,bind(C,name="iMesh_getNumPrnt") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       integer(c_int), intent(in), value :: num_hops
       integer(c_int), intent(out) :: num_parent
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getNumPrnt

     subroutine iMesh_getChldn ( instance, from_entity_set, num_hops, &
          entity_set_handles, entity_set_handles_allocated, entity_set_handles_size, err ) 
       ! ,bind(C,name="iMesh_getChldn") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: from_entity_set
       integer(c_int), intent(in), value :: num_hops
       type(c_ptr), intent(inout) :: entity_set_handles
       integer(c_int), intent(inout) :: entity_set_handles_allocated
       integer(c_int), intent(out) :: entity_set_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getChldn

     subroutine iMesh_getPrnts ( instance, from_entity_set, num_hops, &
          entity_set_handles, entity_set_handles_allocated, entity_set_handles_size, err ) 
       ! ,bind(C,name="iMesh_getPrnts") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: from_entity_set
       integer(c_int), intent(in), value :: num_hops
       type(c_ptr), intent(inout) :: entity_set_handles
       integer(c_int), intent(inout) :: entity_set_handles_allocated
       integer(c_int), intent(out) :: entity_set_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getPrnts

     subroutine iMesh_setVtxArrCoords ( instance, vertex_handles, vertex_handles_size, storage_order, &
          new_coords, new_coords_size, err ) 
       ! ,bind(C,name="iMesh_setVtxArrCoords") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: vertex_handles
       integer(c_int), intent(in), value :: vertex_handles_size
       integer(c_int), intent(in), value :: storage_order
       real(c_double), intent(in) :: new_coords
       integer(c_int), intent(in), value :: new_coords_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setVtxArrCoords

     subroutine iMesh_createVtxArr ( instance, num_verts, storage_order, new_coords, new_coords_size, &
          new_vertex_handles, new_vertex_handles_allocated, new_vertex_handles_size, err ) 
       ! ,bind(C,name="iMesh_createVtxArr") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(in), value :: num_verts
       integer(c_int), intent(in), value :: storage_order
       real(c_double), intent(in) :: new_coords
       integer(c_int), intent(in), value :: new_coords_size
       type(c_ptr), intent(inout) :: new_vertex_handles
       integer(c_int), intent(inout) :: new_vertex_handles_allocated
       integer(c_int), intent(out) :: new_vertex_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_createVtxArr

     subroutine iMesh_createEntArr ( instance, new_entity_topology, lower_order_entity_handles, lower_order_entity_handles_size, &
          new_entity_handles, new_entity_handles_allocated, new_entity_handles_size, status, status_allocated, status_size, &
          err ) 
       ! ,bind(C,name="iMesh_createEntArr") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(in), value :: new_entity_topology
       type(c_ptr), intent(in), value :: lower_order_entity_handles
       integer(c_int), intent(in), value :: lower_order_entity_handles_size
       type(c_ptr), intent(inout) :: new_entity_handles
       integer(c_int), intent(inout) :: new_entity_handles_allocated
       integer(c_int), intent(out) :: new_entity_handles_size
       type(c_ptr), intent(inout) :: status
       integer(c_int), intent(inout) :: status_allocated
       integer(c_int), intent(out) :: status_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_createEntArr

     subroutine iMesh_deleteEntArr ( instance, entity_handles, entity_handles_size, err ) 
       ! ,bind(C,name="iMesh_deleteEntArr") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_deleteEntArr

     subroutine iMesh_createTag ( instance, tag_name, tag_size, tag_type, tag_handle, &
          err, tag_name_len ) 
       ! ,bind(C,name="iMesh_createTag") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       character(len=tag_name_len), intent(in) :: tag_name
       integer(c_int), intent(in), value :: tag_size
       integer(c_int), intent(in), value :: tag_type
       type(c_ptr), intent(out) :: tag_handle
       integer(c_int), intent(out) :: err
       integer(c_int), intent(in), value :: tag_name_len
     end subroutine iMesh_createTag

     subroutine iMesh_destroyTag ( instance, tag_handle, forced, err ) 
       ! ,bind(C,name="iMesh_destroyTag") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(in), value :: forced
       integer(c_int), intent(out) :: err
     end subroutine iMesh_destroyTag

     subroutine iMesh_getTagName ( instance, tag_handle, name, err, name_len ) 
       ! ,bind(C,name="iMesh_getTagName") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: tag_handle
       character(len=name_len), intent(inout) :: name
       integer(c_int), intent(out) :: err
       integer(c_int), intent(in), value :: name_len
     end subroutine iMesh_getTagName

     subroutine iMesh_getTagSizeValues ( instance, tag_handle, tag_size, err ) 
       ! ,bind(C,name="iMesh_getTagSizeValues") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(out) :: tag_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getTagSizeValues

     subroutine iMesh_getTagSizeBytes ( instance, tag_handle, tag_size, err ) 
       ! ,bind(C,name="iMesh_getTagSizeBytes") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(out) :: tag_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getTagSizeBytes

     subroutine iMesh_getTagHandle ( instance, tag_name, tag_handle, err, tag_name_len ) 
       ! ,bind(C,name="iMesh_getTagHandle") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       character(len=tag_name_len), intent(in) :: tag_name
       type(c_ptr), intent(inout) :: tag_handle
       integer(c_int), intent(out) :: err
       integer(c_int), intent(in), value :: tag_name_len
     end subroutine iMesh_getTagHandle

     subroutine iMesh_getTagType ( instance, tag_handle, tag_type, err ) 
       ! ,bind(C,name="iMesh_getTagType") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(out) :: tag_type
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getTagType

     subroutine iMesh_setEntSetData ( instance, entity_set_handle, tag_handle, tag_value, tag_value_size, &
          err ) 
       ! ,bind(C,name="iMesh_setEntSetData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       type(c_ptr), intent(in), value :: tag_handle
       character(len=tag_value_size), intent(in) :: tag_value
       integer(c_int), intent(in), value :: tag_value_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setEntSetData

     subroutine iMesh_setEntSetIntData ( instance, entity_set, tag_handle, tag_value, &
          err ) 
       ! ,bind(C,name="iMesh_setEntSetIntData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(in), value :: tag_value
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setEntSetIntData

     subroutine iMesh_setEntSetDblData ( instance, entity_set, tag_handle, tag_value, &
          err ) 
       ! ,bind(C,name="iMesh_setEntSetDblData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       type(c_ptr), intent(in), value :: tag_handle
       real(c_double), intent(in), value :: tag_value
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setEntSetDblData

     subroutine iMesh_setEntSetEHData ( instance, entity_set, tag_handle, tag_value, &
          err ) 
       ! ,bind(C,name="iMesh_setEntSetEHData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(in), value :: tag_value
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setEntSetEHData
